--- a/concurrency_and_parallellism.ipynb
+++ b/concurrency_and_parallellism.ipynb
@@ -105,6 +105,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 静态数据如何缓存"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 第一，你应该把静态数据缓存到离用户最近的地方。\n",
+    "静态数据就是那些相对不会变化的数据，因此我们可以把它们缓存起来。缓存到哪里呢？常见的有三种，用户浏览器里、CDN上或者在服务器端的Cache中。你因该根据情况，把它们尽量缓存到离用户最近的地方。\n",
+    "### 第二，静态化改造就是要直接缓存HTTP连接。\n",
+    "相较于普通的数据缓存而言，你肯定还听过系统发的静态化改造。静态化改造是直接缓存HTTP连接而不是仅仅缓存数据\n",
+    "\n",
+    "例如：Web代理服务器根据请求URL直接取出对应的HTTP响应头和响应体然后直接返回，这个响应过程简单的连HTTP协议都不用重新组装，甚至连HTTP请求头也不需要解析。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 动态数据如何处理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. ESI方案（或者SSI）：\n",
+    "即在Web代理服务器上做动态内容请求，并将请求插入到静态页面中，当用户拿到页面时已经是一个完整的页面了。这种方式对服务器端性能有些影响，但用户体验较好。\n",
+    "### 2.CSI方案：\n",
+    "即单独发起一个异步JavaScript请求，以向服务端获取动态内容。这种方式服务器端性能更佳，但使用户端页面可能会延时，体验稍差。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 如何处理热点数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 处理热点数据的通常几个思路：一是优化、二是限制、三是隔离。\n",
+    "\n",
+    "先来说说优化。优化热点数据最有效的办法就是缓存热点数据，如果热点数据做了动静分离，那么可以长期缓存静态数据。但是，缓存热点数据更多的是“临时”缓存，即不管是静态数据还是动态数据，都用一个队列短暂地缓存数秒钟，由于队列长度有限，可以采用LRU淘汰算法替换。\n",
+    "\n",
+    "再说说限制。限制更多的是一种保护机制，限制的办法也有很多，例如，对被访问商品的ID做一致性Hash，然后根据Hash做分桶，每个分桶设置一个处理队列，这样可以把热点商品限制在一个请求队列里，防止因某些热点商品占用太多的服务器资源，而是其他请求始终得不到服务器的处理资源。\n",
+    "\n",
+    "最后介绍一下隔离。秒杀系统设计的第一个原则就是将这种热点数据隔离出来，不要让1%的请求影响到另外的99%，隔离出来后也更方便对这1%的请求做针对性的优化。\n",
+    "\n",
+    "具体到“秒杀”业务，我们可以在一下几个层次实现隔离。\n",
+    "+ **业务隔离**: 把秒杀做成一种营销活动，卖家要参加秒杀这种营销活动需要单独报名，从技术上来说，卖家报名后对我们来说就有了已知热点，因此可以提前做好预热。\n",
+    "+ **系统隔离**: 系统隔离更多的是运用时的隔离，可以通过分组部署的方式和另外99%分开。秒杀可以申请单独的域名，目的也是让请求落到不同的集群中。\n",
+    "+ **数据隔离**: 秒杀所调用的数据大部分都是热点数据，比如会启用单独的Cache集群或者MySQL数据库来放热点数据，目的也是不想0.01%的数据有机会影响99.99%数据。\n",
+    "\n",
+    "当然了，实现隔离有很多种方法。比如，你可以按照用户来区分，给不同的用户分配不用的Cookie，在接入层，路由到不同的服务器接口中；再比如，你还可以再接入层针对URL中的不同Path来设置限流策略。服务层调用不同的服务器接口，以及数据层通过给数据打标来区分等等这些措施，其目的都是把已经识别出来的热点请求和普通请求区分开。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
